Test to see if code looks clean on github as gitpod beautify command distorts it. Also fixed bug css validator noticed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ a:hover{
 .connect-icons{
     width: 100%;
     text-align: center;
-    padding-inline-start: 0;
+    padding: 0;
     margin: 20px 0px;
 }
 
